--- a/grpc-helloworld/CMakeLists.txt
+++ b/grpc-helloworld/CMakeLists.txt
@@ -2,29 +2,28 @@ cmake_minimum_required(VERSION 3.15)
 
 project(grpc_hello_world)
 
-find_package(absl CONFIG REQUIRED)
-find_package(Protobuf CONFIG REQUIRED)
-find_package(gRPC CONFIG REQUIRED)
+find_package(absl REQUIRED)
+find_package(Protobuf REQUIRED CONFIG)
+find_package(gRPC REQUIRED)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 set(PROTO_FILE ${CMAKE_CURRENT_SOURCE_DIR}/helloworld.proto)
 set(GENERATED_DIR ${CMAKE_CURRENT_BINARY_DIR}/generated)
+set(Protobuf_PROTOC_EXECUTABLE /usr/local/bin/protoc)
 
 file(MAKE_DIRECTORY ${GENERATED_DIR})
 
 add_custom_command(
     OUTPUT ${GENERATED_DIR}/helloworld.pb.cc ${GENERATED_DIR}/helloworld.pb.h
-    COMMAND ${Protobuf_PROTOC_EXECUTABLE}
-    ARGS --cpp_out=${GENERATED_DIR} --proto_path=${CMAKE_CURRENT_SOURCE_DIR} ${PROTO_FILE}
+    COMMAND ${Protobuf_PROTOC_EXECUTABLE} --cpp_out=${GENERATED_DIR} --proto_path=${CMAKE_CURRENT_SOURCE_DIR} ${PROTO_FILE}
     DEPENDS ${PROTO_FILE}
     COMMENT "Generating C++ files from ${PROTO_FILE}"
 )
 
 add_custom_command(
     OUTPUT ${GENERATED_DIR}/helloworld.grpc.pb.cc ${GENERATED_DIR}/helloworld.grpc.pb.h
-    COMMAND ${Protobuf_PROTOC_EXECUTABLE}
-    ARGS --grpc_out=${GENERATED_DIR} --proto_path=${CMAKE_CURRENT_SOURCE_DIR} --plugin=protoc-gen-grpc=`which grpc_cpp_plugin` ${PROTO_FILE}
+    COMMAND ${Protobuf_PROTOC_EXECUTABLE} --grpc_out=${GENERATED_DIR} --proto_path=${CMAKE_CURRENT_SOURCE_DIR} --plugin=protoc-gen-grpc=`which grpc_cpp_plugin` ${PROTO_FILE}
     DEPENDS ${PROTO_FILE}
     COMMENT "Generating gRPC files from ${PROTO_FILE}"
 )
