Add rpc master <-> mapper listener & mapper listener <-> mapper binary

--- a/src/test_mapper/CMakeLists.txt
+++ b/src/test_mapper/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
 
-project(mapreduce-client)
+project(test_mapper)
 
 find_package(absl REQUIRED)
 find_package(Protobuf REQUIRED CONFIG)
@@ -36,10 +36,11 @@ add_library(grpc_mapreduce_proto
     ${GENERATED_DIR}/mapreduce.grpc.pb.cc
 )
 
-add_executable(test_client test_client.cc)
-target_link_libraries(test_client PRIVATE grpc_mapreduce_proto gRPC::grpc++ gRPC::grpc++_reflection protobuf::libprotobuf)
+add_executable(test_mapper test_mapper.cc)
+target_link_libraries(test_mapper PRIVATE grpc_mapreduce_proto gRPC::grpc++ gRPC::grpc++_reflection protobuf::libprotobuf)
 
-target_include_directories(test_client PRIVATE ${GENERATED_DIR})
-target_include_directories(test_client PRIVATE ../common)
-target_sources(test_client PRIVATE ../common/utils.cc)
-target_sources(test_client PRIVATE ../common/mapreduce.cc)
+target_include_directories(test_mapper PRIVATE ${GENERATED_DIR})
+target_include_directories(test_mapper PRIVATE ../common)
+target_sources(test_mapper PRIVATE ../common/utils.cc)
+target_sources(test_mapper PRIVATE ../common/mapreduce.cc)
+target_sources(test_mapper PRIVATE ../common/mapper.cc)
