--- a/src/mapreduce-deployment.yml
+++ b/src/mapreduce-deployment.yml
@@ -65,3 +65,15 @@ spec:
     - protocol: TCP
       port: 50051
       targetPort: 50051
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mapper-service
+spec:
+  selector:
+    app.kubernetes.io/name: mappers
+  ports:
+    - protocol: TCP
+      port: 50054
+      targetPort: 50054
