--- a/src/reducer/CMakeLists.txt
+++ b/src/reducer/CMakeLists.txt
@@ -12,6 +12,7 @@ set(PROTO_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../proto/)
 set(PROTO_FILE ${PROTO_DIR}/mapreduce.proto)
 set(GENERATED_DIR ${CMAKE_CURRENT_BINARY_DIR}/generated)
 set(Protobuf_PROTOC_EXECUTABLE /usr/local/bin/protoc)
+set(CMAKE_CXX_STANDARD 20)
 
 message(PROTO_DIR="${PROTO_DIR}")
 
