--- a/src/worker/CMakeLists.txt
+++ b/src/worker/CMakeLists.txt
@@ -51,3 +51,5 @@ target_include_directories(main PRIVATE ${GENERATED_DIR})
 target_sources(main PRIVATE ../common/utils.cc)
 target_sources(main PRIVATE ../common/mapreduce.cc)
 target_sources(main PRIVATE ../common/cloud_utils.cc)
+target_sources(main PRIVATE ../common/job-manager.cc)
+target_sources(main PRIVATE ../common/data-structures.cc)
