Add load-balancer interface & interface for acquiring vm ips dynamically

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -8,6 +8,7 @@ project(mapreduce-client)
 find_package(absl REQUIRED)
 find_package(Protobuf REQUIRED CONFIG)
 find_package(gRPC REQUIRED)
+find_package(google_cloud_cpp_compute REQUIRED)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${Protobuf_INCLUDE_DIRS})
@@ -43,17 +44,19 @@ add_library(grpc_mapreduce_proto
 )
 
 add_executable(test_client test_client.cc)
-target_link_libraries(test_client PRIVATE grpc_mapreduce_proto gRPC::grpc++ gRPC::grpc++_reflection protobuf::libprotobuf)
+target_link_libraries(test_client PRIVATE grpc_mapreduce_proto gRPC::grpc++ gRPC::grpc++_reflection protobuf::libprotobuf google-cloud-cpp::compute)
 
 target_include_directories(test_client PRIVATE ${GENERATED_DIR})
 target_include_directories(test_client PRIVATE ../common)
 target_sources(test_client PRIVATE ../common/utils.cc)
 target_sources(test_client PRIVATE ../common/mapreduce.cc)
+target_sources(test_client PRIVATE ../common/cloud_utils.cc)
 
 add_executable(client client.cc)
-target_link_libraries(client PRIVATE grpc_mapreduce_proto gRPC::grpc++ gRPC::grpc++_reflection protobuf::libprotobuf)
+target_link_libraries(client PRIVATE grpc_mapreduce_proto gRPC::grpc++ gRPC::grpc++_reflection protobuf::libprotobuf google-cloud-cpp::compute)
 
 target_include_directories(client PRIVATE ${GENERATED_DIR})
 target_include_directories(client PRIVATE ../common)
 target_sources(client PRIVATE ../common/utils.cc)
 target_sources(client PRIVATE ../common/mapreduce.cc)
+target_sources(client PRIVATE ../common/cloud_utils.cc)
