--- a/src/worker/CMakeLists.txt
+++ b/src/worker/CMakeLists.txt
@@ -53,3 +53,4 @@ target_sources(main PRIVATE ../common/mapreduce.cc)
 target_sources(main PRIVATE ../common/cloud_utils.cc)
 target_sources(main PRIVATE ../common/job-manager.cc)
 target_sources(main PRIVATE ../common/data-structures.cc)
+target_sources(main PRIVATE ../common/load-balancer.cc)
