Update CMake files

--- a/src/master/CMakeLists.txt
+++ b/src/master/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.22)
 
-set(CMAKE_TOOLCHAIN_FILE /home/pit4h/mimuw/irio/map-reduce/vcpkg/scripts/buildsystems/vcpkg.cmake CACHE STRING "Vcpkg toolchain file")
+set(CMAKE_TOOLCHAIN_FILE ${PATH_TO_VCPKG}/scripts/buildsystems/vcpkg.cmake CACHE STRING "Vcpkg toolchain file")
 
 project(mapreduce-master)
 
@@ -49,7 +49,7 @@ target_link_libraries(main PRIVATE grpc_mapreduce_proto gRPC::grpc++ gRPC::grpc+
 target_include_directories(main PRIVATE ${GENERATED_DIR})
 target_sources(main PRIVATE ../common/utils.cc)
 target_sources(main PRIVATE ../common/mapreduce.cc)
-target_sources(main PRIVATE ../common/cloud_utils.cc)
+target_sources(main PRIVATE ../common/cloud-utils.cc)
 target_sources(main PRIVATE ../common/job-manager.cc)
 target_sources(main PRIVATE ../common/data-structures.cc)
 target_sources(main PRIVATE ../common/load-balancer.cc)
