--- a/src/test_reducer/CMakeLists.txt
+++ b/src/test_reducer/CMakeLists.txt
@@ -54,7 +54,7 @@ target_include_directories(simple_reducer PRIVATE ../common)
 target_sources(simple_reducer PRIVATE ../common/utils.cc)
 target_sources(simple_reducer PRIVATE ../common/mapreduce.cc)
 target_sources(simple_reducer PRIVATE ../common/reducer.cc)
-target_sources(simple_reducer PRIVATE ../common/cloud_utils.cc)
+target_sources(simple_reducer PRIVATE ../common/cloud-utils.cc)
 
 add_executable(word_count_reducer word_count_reducer.cc)
 target_link_libraries(word_count_reducer PRIVATE grpc_mapreduce_proto gRPC::grpc++ gRPC::grpc++_reflection protobuf::libprotobuf google-cloud-cpp::compute)
@@ -64,7 +64,7 @@ target_include_directories(word_count_reducer PRIVATE ../common)
 target_sources(word_count_reducer PRIVATE ../common/utils.cc)
 target_sources(word_count_reducer PRIVATE ../common/mapreduce.cc)
 target_sources(word_count_reducer PRIVATE ../common/reducer.cc)
-target_sources(word_count_reducer PRIVATE ../common/cloud_utils.cc)
+target_sources(word_count_reducer PRIVATE ../common/cloud-utils.cc)
 
 add_executable(long_reducer long_reducer.cc)
 target_link_libraries(long_reducer PRIVATE grpc_mapreduce_proto gRPC::grpc++ gRPC::grpc++_reflection protobuf::libprotobuf google-cloud-cpp::compute)
@@ -74,4 +74,4 @@ target_include_directories(long_reducer PRIVATE ../common)
 target_sources(long_reducer PRIVATE ../common/utils.cc)
 target_sources(long_reducer PRIVATE ../common/mapreduce.cc)
 target_sources(long_reducer PRIVATE ../common/reducer.cc)
-target_sources(long_reducer PRIVATE ../common/cloud_utils.cc)
+target_sources(long_reducer PRIVATE ../common/cloud-utils.cc)
