--- a/src/master/CMakeLists.txt
+++ b/src/master/CMakeLists.txt
@@ -50,7 +50,7 @@ target_include_directories(main PRIVATE ${GENERATED_DIR})
 target_sources(main PRIVATE ../common/utils.cc)
 target_sources(main PRIVATE ../common/mapreduce.cc)
 target_sources(main PRIVATE ../common/cloud-utils.cc)
-target_sources(main PRIVATE ../common/job-manager.cc)
 target_sources(main PRIVATE ../common/data-structures.cc)
-target_sources(main PRIVATE ../common/load-balancer.cc)
-target_sources(main PRIVATE ../common/health-checker.cc)
+target_sources(main PRIVATE job-manager.cc)
+target_sources(main PRIVATE load-balancer.cc)
+target_sources(main PRIVATE health-checker.cc)
