Add testbed with sample map/reduce binaries

--- a/src/test_reducer/CMakeLists.txt
+++ b/src/test_reducer/CMakeLists.txt
@@ -74,3 +74,25 @@ target_sources(long_reducer PRIVATE ../common/utils.cc)
 target_sources(long_reducer PRIVATE ../common/mapreduce.cc)
 target_sources(long_reducer PRIVATE ../common/reducer.cc)
 target_sources(long_reducer PRIVATE ../common/cloud-utils.cc)
+
+add_executable(reducer_randomly_crashing reducer_randomly_crashing.cc)
+target_link_libraries(reducer_randomly_crashing PRIVATE grpc_mapreduce_proto gRPC::grpc++ gRPC::grpc++_reflection protobuf::libprotobuf google-cloud-cpp::compute)
+
+target_include_directories(reducer_randomly_crashing PRIVATE ${GENERATED_DIR})
+target_include_directories(reducer_randomly_crashing PRIVATE ../common)
+target_sources(reducer_randomly_crashing PRIVATE ../common/utils.cc)
+target_sources(reducer_randomly_crashing PRIVATE ../common/mapreduce.cc)
+target_sources(reducer_randomly_crashing PRIVATE ../common/reducer.cc)
+target_sources(reducer_randomly_crashing PRIVATE ../common/cloud-utils.cc)
+target_sources(reducer_randomly_crashing PRIVATE ../common/test-utils.cc)
+
+add_executable(reducer_inter_write_crashing reducer_inter_write_crashing.cc)
+target_link_libraries(reducer_inter_write_crashing PRIVATE grpc_mapreduce_proto gRPC::grpc++ gRPC::grpc++_reflection protobuf::libprotobuf google-cloud-cpp::compute)
+
+target_include_directories(reducer_inter_write_crashing PRIVATE ${GENERATED_DIR})
+target_include_directories(reducer_inter_write_crashing PRIVATE ../common)
+target_sources(reducer_inter_write_crashing PRIVATE ../common/utils.cc)
+target_sources(reducer_inter_write_crashing PRIVATE ../common/mapreduce.cc)
+target_sources(reducer_inter_write_crashing PRIVATE ../common/reducer.cc)
+target_sources(reducer_inter_write_crashing PRIVATE ../common/cloud-utils.cc)
+target_sources(reducer_inter_write_crashing PRIVATE ../common/test-utils.cc)
