--- a/src/test_mapper/CMakeLists.txt
+++ b/src/test_mapper/CMakeLists.txt
@@ -74,3 +74,25 @@ target_sources(long_mapper PRIVATE ../common/utils.cc)
 target_sources(long_mapper PRIVATE ../common/mapreduce.cc)
 target_sources(long_mapper PRIVATE ../common/mapper.cc)
 target_sources(long_mapper PRIVATE ../common/cloud-utils.cc)
+
+add_executable(mapper_randomly_crashing mapper_randomly_crashing.cc)
+target_link_libraries(mapper_randomly_crashing PRIVATE grpc_mapreduce_proto gRPC::grpc++ gRPC::grpc++_reflection protobuf::libprotobuf google-cloud-cpp::compute)
+
+target_include_directories(mapper_randomly_crashing PRIVATE ${GENERATED_DIR})
+target_include_directories(mapper_randomly_crashing PRIVATE ../common)
+target_sources(mapper_randomly_crashing PRIVATE ../common/utils.cc)
+target_sources(mapper_randomly_crashing PRIVATE ../common/mapreduce.cc)
+target_sources(mapper_randomly_crashing PRIVATE ../common/mapper.cc)
+target_sources(mapper_randomly_crashing PRIVATE ../common/cloud-utils.cc)
+target_sources(mapper_randomly_crashing PRIVATE ../common/test-utils.cc)
+
+add_executable(mapper_inter_write_crashing mapper_inter_write_crashing.cc)
+target_link_libraries(mapper_inter_write_crashing PRIVATE grpc_mapreduce_proto gRPC::grpc++ gRPC::grpc++_reflection protobuf::libprotobuf google-cloud-cpp::compute)
+
+target_include_directories(mapper_inter_write_crashing PRIVATE ${GENERATED_DIR})
+target_include_directories(mapper_inter_write_crashing PRIVATE ../common)
+target_sources(mapper_inter_write_crashing PRIVATE ../common/utils.cc)
+target_sources(mapper_inter_write_crashing PRIVATE ../common/mapreduce.cc)
+target_sources(mapper_inter_write_crashing PRIVATE ../common/mapper.cc)
+target_sources(mapper_inter_write_crashing PRIVATE ../common/cloud-utils.cc)
+target_sources(mapper_inter_write_crashing PRIVATE ../common/test-utils.cc)
