Fix dependencies on cloud logging

--- a/src/test_mapper/CMakeLists.txt
+++ b/src/test_mapper/CMakeLists.txt
@@ -76,7 +76,7 @@ target_sources(long_mapper PRIVATE ../common/mapper.cc)
 target_sources(long_mapper PRIVATE ../common/cloud-utils.cc)
 
 add_executable(mapper_randomly_crashing mapper_randomly_crashing.cc)
-target_link_libraries(mapper_randomly_crashing PRIVATE grpc_mapreduce_proto gRPC::grpc++ gRPC::grpc++_reflection protobuf::libprotobuf google-cloud-cpp::compute)
+target_link_libraries(mapper_randomly_crashing PRIVATE grpc_mapreduce_proto gRPC::grpc++ gRPC::grpc++_reflection protobuf::libprotobuf google-cloud-cpp::compute google-cloud-cpp::logging)
 
 target_include_directories(mapper_randomly_crashing PRIVATE ${GENERATED_DIR})
 target_include_directories(mapper_randomly_crashing PRIVATE ../common)
@@ -87,7 +87,7 @@ target_sources(mapper_randomly_crashing PRIVATE ../common/cloud-utils.cc)
 target_sources(mapper_randomly_crashing PRIVATE ../common/test-utils.cc)
 
 add_executable(mapper_inter_write_crashing mapper_inter_write_crashing.cc)
-target_link_libraries(mapper_inter_write_crashing PRIVATE grpc_mapreduce_proto gRPC::grpc++ gRPC::grpc++_reflection protobuf::libprotobuf google-cloud-cpp::compute)
+target_link_libraries(mapper_inter_write_crashing PRIVATE grpc_mapreduce_proto gRPC::grpc++ gRPC::grpc++_reflection protobuf::libprotobuf google-cloud-cpp::compute google-cloud-cpp::logging)
 
 target_include_directories(mapper_inter_write_crashing PRIVATE ${GENERATED_DIR})
 target_include_directories(mapper_inter_write_crashing PRIVATE ../common)
