--- a/src/worker/CMakeLists.txt
+++ b/src/worker/CMakeLists.txt
@@ -20,6 +20,7 @@ set(PROTO_FILE ${PROTO_DIR}/mapreduce.proto)
 set(GENERATED_DIR ${CMAKE_CURRENT_BINARY_DIR}/generated)
 set(Protobuf_PROTOC_EXECUTABLE $<TARGET_FILE:protobuf::protoc>)
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_FLAGS "-O3")
 
 message(PROTO_DIR="${PROTO_DIR}")
 
